# Pingzilla

./: .gitignore  CLAUDE.md  Makefile  MarketingPlan.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  embedded.provisionprofile  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
